--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "obsidian-mcp",
-  "version": "1.1.0",
+  "name": "@masaki39/obsidian-mcp",
+  "version": "0.0.1",
   "description": "MCP server exposing the active Obsidian file (path and content) via Local REST API",
   "main": "./build/index.js",
   "scripts": {
